fix calendar