@@ -1,6 +1,5 @@
 
 package org.javawavers.studybuddy;
-import java.lang.reflect.Array;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -51,7 +50,7 @@ public class TaskAssignment {
             }
         }
         int taskIndex = 1;
-        tasks.add(tasks.getFirst());
+        tasks.add(tasks.get(0));
         int taskLength = tasks.size() - 1;
 
         for (int col = 0; col < colSize; col++) {
